--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -70,3 +70,12 @@
     font-style: normal;
     src: url('/fonts/Lora-Bold.woff2') format('woff2');
 }
+
+/* Days One */
+@font-face {
+    font-family: 'Days One';
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+    src: url('/fonts/DaysOne-Regular.woff2') format('woff2');
+}
