Improved some logic to display data in Accordion component

--- a/src/components/atoms/Accordion/styles.css
+++ b/src/components/atoms/Accordion/styles.css
@@ -3,12 +3,12 @@
 }
 
 .AccordionChevron {
-    width: 30px;
-    height: 30px;
+    width: 30px !important;
+    height: 30px !important;
 }
 
 .AccordionChevron path {
-    fill: #eac953;
+    fill: #eac953 !important;
 }
 
 .AccordionTrigger[data-state='open'] > .AccordionChevron {
