Improved displaying of news feeds using transition property

--- a/src/components/atoms/Accordion/styles.css
+++ b/src/components/atoms/Accordion/styles.css
@@ -36,7 +36,7 @@
     align-items: center;
     padding: 20px 30px;
     width: 100%;
-    background-color: var(--sage-3); /* olivedrab; */ /* #808836 */
+    background-color: var(--sage-3);
     border-bottom: 1px solid #cba726;
 }
 
@@ -49,7 +49,7 @@
 }
 
 .title {
-    color: var(--yellow-3); /* #eac953; */
+    color: var(--yellow-3);
     font-size: var(--font-18);
     font-weight: 700;
     text-transform: uppercase;
@@ -59,7 +59,7 @@
 .acc-content {
     width: 100%;
     padding: 20px 30px;
-    border: 1px solid var(--yellow-2); /* #cba726 */
+    border: 1px solid var(--yellow-2);
     border-radius: 6px;
     margin: 15px 0;
 
